--- a/views/index.pug
+++ b/views/index.pug
@@ -11,6 +11,7 @@ block content
     h2 Search Results
     ul
       each val in results
-        li=  val
+        li
+          a(href=val[0])= val[1]
       else
         li No results found
