--- a/views/index.pug
+++ b/views/index.pug
@@ -2,7 +2,9 @@ extends layout
 
 block content
   h1 Spotify Playlist Search
-  p Please enter the name of the playlist you'd like to search for
+  title  Please enter the name of the playlist you'd like to search for
+
+ //-
   form(method='POST' action='/search')
     input(type='text' name='playlist_name')
     input(type='submit' value='Search')
@@ -15,3 +17,4 @@ block content
           a(href=val[0])= val[1]
       else
         li No results found
+ title I am just trying to see this
