--- a/views/layout.pug
+++ b/views/layout.pug
@@ -1,8 +1,11 @@
 doctype html
-html
-  head
-    title= title
-    link(rel='stylesheet', href='/stylesheets/style.css')
+extends layout
 
-  body
-    block content
+style.
+  h1 {
+    font-size: 19px;
+    color: #464646;
+  }
+block content
+  h1= title
+  p Welcome to #{title}
