--- a/views/index.pug
+++ b/views/index.pug
@@ -2,6 +2,7 @@ extends layout
 
 block content
   h1 Spotify Playlist Search
+  a(href='/login') Login to Spotify
   p Please enter the name of the playlist you'd like to search for
   form(method='POST' action='/search')
     input(type='text' name='playlist_name')
