fix no results behavior

--- a/views/index.pug
+++ b/views/index.pug
@@ -31,7 +31,7 @@ style.
 
             if strain
                 p Strain: #{strain.name} (#{strain.effects})
-            else
+            else if strain === 0
                 p Strain not found
 
             if results
