--- a/views/includes/nav.pug
+++ b/views/includes/nav.pug
@@ -6,10 +6,15 @@ html
     nav
             li
                 a(href='/') Home
+
+            li
+                a(href='/login') Login
+
+            li
+                a(href = '/loggedon') Search
             li
                 a(href='/about') About
-            li
-                a(href='/login') Login/Signup
-            li
-                a(href='#') More
+
+
+
 
